# baremint

./: .env.example  .gitignore  Anchor.toml  DEVNET-DEPLOY.md  TESTING.md  jest.config.anchor.ts  package-lock.json  package.json  proxy.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
components/admin/: moderation-queue.tsx
components/auth/: auth-form.tsx  oauth-buttons.tsx
components/content/: media-upload.tsx  post-card.tsx  post-composer.tsx  post-feed.tsx  unlock-dialog.tsx  video-upload.tsx
components/creator/: creator-own-profile.tsx  image-cropper.tsx  kyc-badge.tsx  onboarding-wizard.tsx  vesting-timeline.tsx
hooks/: use-notification-count.ts
lib/: auth-client.ts  auth.ts  env.ts
programs/baremint/: Cargo.toml
programs/baremint/src/: errors.rs  lib.rs  math.rs
programs/baremint/src/instructions/: burn_access.rs  buy.rs  claim_vested.rs  create_token.rs  initialize.rs  mod.rs  revoke_vesting.rs  sell.rs  withdraw_fees.rs
programs/baremint/src/state/: bonding_curve.rs  creator_profile.rs  global_config.rs  mod.rs  vesting.rs
tests/: burn.test.ts  buy_sell.test.ts  create_token.test.ts  fees.test.ts  initialize.test.ts  setup.ts  vesting.test.ts
(+206 files in other folders)
