[package]
name = "baremint"
version = "0.1.0"
description = "Baremint bonding curve program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "baremint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token"] }
# Pin blake3 to avoid edition2024 requirement incompatible with SBF toolchain
blake3 = "=1.5.5"
